# cygwin-setup

./: .appveyor.yml  .cvsignore  .gitignore  ActionList.h  AntiVirus.cc  AntiVirus.h  CHANGES  CONTRIBUTORS  ChangeLog  CliParseFeedback.cc  CliParseFeedback.h  ConnectionSetting.cc  ConnectionSetting.h  ControlAdjuster.cc  ControlAdjuster.h  Exception.cc  Exception.h  Feedback.h  FilterVisitor.cc  FilterVisitor.h  FindVisitor.cc  FindVisitor.h  GUIDELINES  Generic.h  GetNetAuth.h  GetOption.cc  IOStreamProvider.h  IniDBBuilder.cc  IniDBBuilder.h  IniDBBuilderLint.h  IniDBBuilderPackage.cc  IniDBBuilderPackage.h  IniParseFeedback.cc  IniParseFeedback.h  IniParseFindVisitor.cc  IniParseFindVisitor.h  IniState.h  KeysSetting.cc  KeysSetting.h  ListView.cc  (+240 more)
.github/workflows/: cygwin.yml  fedora.yml
bz2lib/: ChangeLog  Makefile  Makefile.am  Makefile.in  bzlib.h  configure  configure.in
cfgaux/: .direxists  ltmain.sh
cli/: CliFeedback.h  CliGetNetAuth.cc  CliGetNetAuth.h  CliGetUrlFeedback.cc  CliHashCheckFeedback.cc  CliParseFeedback.cc
csu_util/: MD5Sum.cc  MD5Sum.h  version_compare.cc
gui/: GuiFeedback.h  GuiGetNetAuth.cc  GuiGetNetAuth.h  GuiGetUrlFeedback.cc  GuiHashCheckFeedback.cc  GuiParseFeedback.cc  SitePage.cc  SitePage.h
libgcrypt/: config.h.in  configure
libgcrypt/cipher/: Makefile.in
libgcrypt/doc/: gcrypt.info  version.texi
libgcrypt/src/: secmem.c
libgetopt++/: ChangeLog  Makefile.am  bootstrap.sh  configure.ac  configure.in
libgetopt++/include/getopt++/: BoolOption.h  DefaultFormatter.h  GetOption.h  Option.h  OptionSet.h  StringArrayOption.h  StringChoiceOption.h  StringOption.h
libgetopt++/src/: BoolOption.cc  GetOption.cc  OptionSet.cc  StringArrayOption.cc  StringChoiceOption.cc  StringOption.cc  getopt.c
libgetopt++/tests/: BoolOptionTest.cc  OptionSet.cc  optioniterator.cc  testoption.cc
lzma-sdk/: LzmaDec.c  LzmaDec.h  Types.h
packaging-scripts/: checkout.sh  conf.sh  fedora-prereqs-install.sh
po/ar/: res.po
po/de/: res.po
po/el/: res.po
po/fi/: res.po
po/fr/: res.po
po/ga/: res.po
po/id/: res.po
po/it/: res.po
po/ja/: res.po
po/ka/: res.po
po/pl/: res.po
po/pt_BR/: res.po
po/ru/: res.po
po/sk/: res.po
po/sv/: res.po
po/tr/: res.po
po/uk/: res.po
po/zh_Hans/: res.po
regex/: regcomp.c  regexec.c
res/de/: res.rc
res/en/: res.rc
res/fr/: res.rc
res/ja/: res.rc
res/pl/: res.rc
res/tr/: res.rc
res/zh_Hans/: res.rc
rsync/: Makefile.am  Makefile.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  delta.c  job.c  rsync.h
rsync/popt/: Makefile.in
temp/: Version.pm  packages  rh  setup.ini  setup.ini.base  setup.ini.rpm  upset
tests/: Makefile.am  UserSettingTest.cc  UserSettingsTest.cc
zlib/: ChangeLog  FAQ  INDEX  Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  deflate.c  deflate.h  example.c  gzio.c  infcodes.c  inflate.c  inftrees.c  infutil.c  infutil.h  trees.c  zconf.h  zlib.3  zlib.h  zutil.c  zutil.h
zlib/amiga/: Makefile.sas
zlib/contrib/: README.contrib
zlib/contrib/asm386/: gvmat32.asm
zlib/contrib/delphi/: zlib.mak
zlib/contrib/delphi2/: d_zlib.bpr  zlib.bpr  zlib32.bpr
zlib/contrib/minizip/: ChangeLogUnzip
zlib/contrib/untgz/: makefile.w32  untgz.c
zlib/msdos/: Makefile.bor  Makefile.dj2  Makefile.emx  Makefile.msc  Makefile.tc  Makefile.w32
zlib/nt/: Makefile.emx  Makefile.gcc  Makefile.nt
zlib/os2/: Makefile.os2
